<resources>
    <string name="app_name">FitnessMania</string>
    <string name="title_home">Übersicht</string>
    <string name="title_dashboard">Hinzufügen</string>
    <string name="title_notifications">Tagebuch</string>

    <!-- Profile Strings -->
    <string name="welcome_message">Herzlich willkommen bei FitnessMania!</string>
    <string name="input_info_message">Bitte trage die benötigten Daten ein, damit wir dir optimal helfen können</string>
    <string name="firstname">Vorname:</string>
    <string name="lastname">Nachname:</string>
    <string name="weight">Gewicht (kg):</string>
    <string name="age">Alter:</string>
    <string name="create_profile">Profil erstellen</string>
    <string name="workout_level">Aktivitätskategorie</string>

    <!-- Home Strings -->
    <string name="progress">Fortschritt</string>
    <string name="registered_trainings">Heutige Trainings</string>
    <string name="homeHead">Übersicht</string>
    <string name="snackbar_MET_msg">ungenügend (bis 600 MET), niedrig (600–3999 MET), mittel (4000-7999 MET) und hoch (mehr als 8000 MET)</string>
    <string name="arrowLeft">Pfeil Home links</string>
    <string name="arrowRight">Pfeil Home rechts</string>
    <string name="snackbar_training_info">Fügen Sie ein Training ihrer Liste hinzu!.</string>
    <string name="snackbar_training_day_info">Erstellen Sie ihren Trainingsplan. Dort können Sie mehrere Trainings einbauen und diese immer wieder verwenden.</string>
    <string name="alter">Alter</string>
    <string name="invalid_input_msg">Überprüfen Sie Ihre Eingaben nochmal!</string>
    <string name="blank_input_msg_alert">Sie haben vergessen was einzugeben</string>
    <string name="erstelle_neues_training">Erstelle Neues Training</string>
    <string name="erstelle_neuen_trainingsplan">Erstelle Neuen Trainingsplan</string>
    <string name="add_available_traings">Klicke auf deine verfügbaren Trainingspläne</string>
    <string name="delete_trainingsplan_info">(Oder halte gedrückt zum Löschen)</string>
    <string name="edit_training_info">(Anklicken zum Bearbeiten oder Löschen)</string>
    <string name="locationStringDefault">Lade Standort...</string>
    <string name="temperatureStringEmpty">--.-°C</string>

    <!-- Trainings Today -->
    <string name="training_art">Art</string>
    <string name="training_intensity">Intensität</string>
    <string name="training_met_value">MetValue</string>
    <string name="training_status">Status</string>

    <!-- WorkoutLevel -->
    <string-array name="workout_levels">
        <item>ungenügend</item>
        <item>niedrig</item>
        <item>mittel</item>
        <item>hoch</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_training_program_msg">Geben Sie einen Namen für ihren persönlichen Trainingsplan ein:</string>
    <string name="weiter">Weiter</string>
    <string name="new_training_plan_add_msg">Füge deinem Trainingsplan ein oder mehrere Training hinzu</string>
    <string name="new_training_msg">Füge ein Training hinzu</string>
    <string name="selectNewTraining_msg">Wähle ein Training aus:</string>
    <string name="newTraining_msg">Füge ein Training hinzu!</string>
    <string name="trainingsplan_exists_msg">Name für den Trainingsplan existiert bereits! Geben Sie</string>
    <string name="trainingsplan_success_msg">Trainingsplan wurde erfolgreich erstellt!</string>

    <!-- Settings -->
    <string name="change_profile">Profil anpassen</string>
    <string name="button_change_profile">Profil anpassen</string>
    <string name="button_delete_profile">Profil löschen</string>
    <string name="title_activity_training_options">TrainingOptionsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
</resources>