<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.fitnessapp.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.fitnessapp.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" >
        <action
            android:id="@+id/action_navigation_dashboard_to_newTrainingPlanFragment"
            app:destination="@id/newTrainingPlanFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.fitnessapp.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <activity
        android:id="@+id/profileActivity"
        android:name="com.example.fitnessapp.ProfileActivity"
        android:label="activity_profile"
        tools:layout="@layout/activity_profile" />
    <fragment
        android:id="@+id/newTrainingPlanFragment"
        android:name="com.example.fitnessapp.ui.dashboard.NewTrainingPlanFragment"
        android:label="Neuer Trainingsplan"
        tools:layout="@layout/fragment_new_training_plan" >
        <action
            android:id="@+id/action_newTrainingPlanFragment_to_newTraingsPlanWithTrainingFragment"
            app:destination="@id/newTraingsPlanWithTrainingFragment" />
    </fragment>
    <fragment
        android:id="@+id/newTraingsPlanWithTrainingFragment"
        android:name="com.example.fitnessapp.NewTraingsPlanWithTrainingFragment"
        android:label="fragment_new_traings_plan_with_training"
        tools:layout="@layout/fragment_new_traings_plan_with_training" />
</navigation>